Changes towards version 0.7:
- Added a Remix option to the setup menu - Michael
- Addon zips can live in content/addons directly - Michael
- 3DO music separated into an addon pack - Michael
- Major change in resource index scheme - Michael
  - .lst replaced (mapping to IDs instead of to files)
  - .rmp files give the mapping from IDs to files. 
  - Addons provide additional files instead of overriding UIO
  - Addons must provide .rmp files to do the necessary overrides.
- Removed unnecessary _ALIGNED_ON macro usage - SvdB
- The current directory is now among the locations searched for the content
  when no explicit location has been specified. (bug fix) - from Nic
- Non-3DO Shipspin anims now use Presentations - Michael
- Added presentaion commands TEXT, TE (text effect), MOVIE - Alex
- Increased the size of display queue (elements were sometimes missing
  in e.g. Nemesis vs. Nemesis battles with many marines out) - Alex
- ShowPresentation() no longer clears the screen by force; presentations
  now do this by request - Michael
- Added match_matchPatternOnce() - SvdB
- Fixed a problem with blue ships after Avatar's tractor beam,
  along with some other fill-stamp situations; bug #929 - Alex
- Added TFB_Canvas_Lock(), TFB_Canvas_Unlock() and TFB_Canvas_GetStride()
  - SvdB
- Scaling images with respect to their hotspots: stabilizes compound
  Melee objects; re-added bilinear Melee scaler; zooming planet uses
  bilinear; fixes bug #685 - Alex
- Added --keepaspectratio to keep correct aspect ratio when using
  custom resolutions in OpenGL mode - Mika
- Add /var/tmp as possible location for temporary files. Don't try
  /tmp and /var/tmp at all on MS Windows (Cygwin excepted) - SvdB
- Added fullscreen/windowed toggle key F11 (bug #578) - Mika
- Allow building without ogg vorbis support (bug #852) - SvdB
- Reworked SuperMelee fleet loading (fixes bug #823) - SvdB
- Fixed enemy ships getting recrewed between ecnounters in HyperSpace
  (bug #996) - Alex